--- a/JAVA/자바의 특징.md
+++ b/JAVA/자바의 특징.md
@@ -2,17 +2,21 @@
 
 
 1. 객체지향 프로그래밍 언어이다.
-2. JVM이 있어 특정 OS에 구속받지 않는다.
-3. 가비지컬렉터가 메모리 관리를 자동으로 해준다.
+2. 특정 OS에 구속받지 않는다.(JVM이 자바 컴파일러르 통해서 사용자의 코드를 Byte코드로 변환)
+3. Garbage Collection이 메모리 관리를 자동으로 해준다.
+4. 멀티쓰레드 프로그래밍 가능 -> C/C++는 운영체제의 도움을 받아 멀티쓰레드 수행
+5. 동적 로딩지원 : 객체가 필요한 시점에 클래스를 로딩하여 생성
 
 
 자바의 장점
 1. 재사용성이 뛰어나다.
+2. 개방형 구조로 여러 기술과의 융합이 가능
+3. 플랫폼에 독립적, 어떤 환겨에서도 동일하게 실행
+4. 많은 오픈소스 프레임워크로 생상성을 증가하고, 유지보수 비용 절감 가능
 
 
 자바의 단점
-1. C에 비해 속도가 떨어진다.
+1. 처리 속도가 중요한 애플리케이션에 적합하지 않다.
+2. 직접 하드웨어를 정밀하게 조정해야하 하는 개발에 적합하지 않다.
 
 
-자바가 주로 사용되는 곳
-1. Web, APP개발 등
