--- a/자동차/통신시스템.md
+++ b/자동차/통신시스템.md
@@ -7,8 +7,6 @@
 - Chassis Domain : 주행 안전 보장
 - Powertrain Domain : 주기능(움직이는)
 - Infotainment Domain : (자동차 조작과 관련없는) 부가 기능
- 
- 
  + multimedia Domain : 통신x (자동차 조작과 관련없는) 부가 기능
 
 
@@ -30,3 +28,50 @@ level 5 : 완전 자율주행
 
 
 ## 프로토콜
+
+: 네트워크 종단간 정보를 정확하고 효율적으로 전송하고자 하는 상호간의 약속
+
+
+### 프로토콜 계층화
+- 통신 시스템의 기능을 몇 개의 계층으로 나누어 배치
+- 계층화된 프로토콜에서 송신부와 수신부는 같은 형식의 데이터를 취급
+- 각 계층 사이에는 서로간의 잘 정의된 인터페이스를 통해서 협조
+- 각 계층별로 독립적으로 test 및 변경이 용이
+- 각 계층은 독립적으로 구현
+
+통신 프로토콜
+- Header :  qnrkwjdqh
+- Payload : 각 계층이 전송하고자 하는 실체
+- Header가 많으면 기능up, 효율down
+- 현 계층 payload = 위의 계층 header + payload
+ 
+ 
+### 물리계층
+- 물리적 매체를 통한 비트 스트림 전송
+- 케이블, 커넥터
+- heaerx
+
+### 링크
+- 하나의 Ethernet IF에서 다른 Ethernet IF로 오류없는 데이터 전달
+- 주소와 제어 정보를 포함
+- 전송단위 : Frame
+- 수신한 뒤에 수신부가 본인이 아니면 폐기
+- 다른곳에서 송신중일때는 송신x
+
+### 네트워크
+- 스위칭 : 물리적 링크간 일시적 연결 관리
+- 라우팅 : 가장 최적의 경로를 선택
+- 라우팅 테이블 : 라우팅 테이블을 보고 최적 경로 선택
+- 전송단위 : Packet
+
+#### 네트워크 주소
+- Network ID : 라우팅의 근거
+- Host ID : 최종 호스트를 결정
+- class A : 0     7bits   24bits
+- class B : 10    14bits  16bits
+- class C : 110   21bits  8bits
+- class D : 1110  28bits
+
+
+### 전송
+- 서비스-점 주소 지정(Service-point addressing) : 한 기계 안에서 어떤 애플리케이션을 종단으로 할지 지정
