--- a/자동차/통신시스템.md
+++ b/자동차/통신시스템.md
@@ -75,3 +75,38 @@ level 5 : 완전 자율주행
 
 ### 전송
 - 서비스-점 주소 지정(Service-point addressing) : 한 기계 안에서 어떤 애플리케이션을 종단으로 할지 지정
+
+## 차량 Ethernet
+### CAN(Controller Area Network)
+- Multi Master : 모든 노드가 송수신 가능
+- 메세지에 송수신 주소가 존재x
+- 레이블(ID)가 존재 -> 송신을 기다리지 않고 모두 전송하고 나보다 낮은 id가 있으면 송신을 멈춤
+- 우선순위 처리에 유리
+- but 전송속도가 1Mbps (느림 -> 카메라 같은거에 못씀)
+
+### Ethernet
+- 성숙기 -> 검증됨
+- 충분한 대역폭 (100Mbps ~ 1Gbps)
+- 낮은 비용
+
+
+#### 기술이슈 존재
+- PHY : 무거움 -> 선을 2개로 BroadR
+- 결정성 (CAN 처럼 우선순위 강력하지 x) -> AVB로 보완
+- 상위 layer프로토콜
+- 보안 -> 현재 연구중
+
+### 차량 Ethernet의 특징
+- Switch가 망의 Topology를 결정
+- CAN대비 높은 대역폭/데이터 효능
+- Layered Architecture
+
+#### 차량 Ethernet과 IT Ethernet프로토콜 차이
+- 응용 : DoIP, NM <-> HTTP, SMTP
+- 네트워크 : AVB, IP <-> IP
+- 링크 : AVB, MAC <-> MAC
+- 물리 : Full Duplex 1 Twist pair(Broad R) <-> Half Duplex 2 twisted pair
+
+
+#### DoIP : ECU 진단 서비스
+#### NM(Network Management) : ECU 간의 통신보장, 전력소비 감소
